test/error/DynamicObjectInitLeakInit.fu
public class Test
{
	internal int X;

	public static bool Run()
	{
		Test p = new Test { X = 5 }; //ERROR: Dynamically allocated object must be assigned to a 'Test#' reference
		return true;
	}
}
